auto-test/tests/chapter_18/invalid_types/tag_resolution/member_name_wrong_scope.c
struct s {
    int a;
};

int main(void) {
    struct s foo = {1};

    
    struct s {
        int b;
    };

    return foo.b; 
}